--- a/frontend/src/styles/atlas-components/_switch-version.scss
+++ b/frontend/src/styles/atlas-components/_switch-version.scss
@@ -1,4 +1,4 @@
-@use '../variables' as variables;
+@use 'src/styles/variables' as variables;
 
 app-switch-version table {
   ::-webkit-scrollbar {
@@ -24,6 +24,7 @@ app-switch-version table {
 
     tr {
       width: 42.5rem;
+
       &.mat-mdc-row {
         height: auto;
       }
@@ -35,9 +36,11 @@ app-switch-version table {
         &:first-child {
           width: 35%;
         }
+
         &:last-child {
           width: 25%;
         }
+
         width: 20%;
       }
 
@@ -47,6 +50,7 @@ app-switch-version table {
 
       &:not(.placeholder-row) {
         cursor: pointer;
+
         &:hover {
           background-color: variables.$gray-100;
         }
@@ -62,20 +66,26 @@ app-switch-version table {
     display: block;
     width: 42.5rem;
     margin: 0 auto 0 3px;
+
     tr {
       display: flex;
       border-bottom: 2px solid variables.$gray-900;
+
       &.mat-mdc-header-row {
         height: auto;
       }
+
       th {
         width: 20%;
+
         &.mat-mdc-header-cell {
           border-bottom: 0;
         }
+
         &:first-child {
           width: 35%;
         }
+
         &:last-child {
           width: 25%;
         }
