ATLAS-1115: create atlas-field-error component

--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -9,5 +9,5 @@
     {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 1500 } }}
   </mat-label>
   <textarea data-cy="comment" formControlName="comment" matInput rows="7"></textarea>
-  <!--  <mat-error fieldErrors></mat-error>-->
+  <app-atlas-field-error [form]="formGroup" controlName="comment"></app-atlas-field-error>
 </div>
