--- a/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.html
+++ b/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.html
@@ -1,5 +1,6 @@
 <div class="field-input-container">
   <atlas-text-field
+    [customError]="{ errorKey: 'pattern', translationKey: 'VALIDATION.CMYK_INVALID' }"
     [customInputNgStyle]="{ 'padding-left': '30px' }"
     [fieldExamples]="[
       { label: 'FORM.FOR_EXAMPLE', translate: true },
