--- a/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
+++ b/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex align-items-center">
   <atlas-text-field
+    [customError]="{ errorKey: 'pattern', translationKey: 'VALIDATION.COLOR_INVALID' }"
     [customInputNgStyle]="{ 'padding-left': '30px' }"
     [fieldExamples]="[
       { label: 'FORM.FOR_EXAMPLE', translate: true },
