--- a/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.html
+++ b/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.html
@@ -1,23 +1,34 @@
-<div class="field-input-container">
-  <atlas-text-field
-    [customError]="{ errorKey: 'pattern', translationKey: 'VALIDATION.CMYK_INVALID' }"
-    [customInputNgStyle]="{ 'padding-left': '30px' }"
-    [fieldExamples]="[
-      { label: 'FORM.FOR_EXAMPLE', translate: true },
-      { label: exampleLabel, translate: false }
-    ]"
-    [required]="true"
-    controlName="{{ attributeName }}"
-    data-cy="cmyk-picker-input"
-    fieldLabel="{{ label }}"
-  >
-    <ng-template #customChildInputPrefixTemplate>
-      <div
-        [style.background-color]="toRbg(formControl.value) || 'transparent'"
-        class="color-indicator {{
-          formControl.value ? 'border border-dark rounded-1' : ''
-        }} preview-color"
-      ></div>
-    </ng-template>
-  </atlas-text-field>
+<app-atlas-lable-field
+  [fieldExamples]="[
+    { label: 'FORM.FOR_EXAMPLE', translate: true },
+    { label: exampleLabel, translate: false }
+  ]"
+  [required]="true"
+  fieldLabel="{{ label }}"
+></app-atlas-lable-field>
+<div class="d-flex align-items-center">
+  <form [formGroup]="formGroup">
+    <div class="text-field-wrapper">
+      <div class="text-field-flex">
+        <div
+          [style.background-color]="toRbg(formControl.value) || 'transparent'"
+          class="color-indicator {{
+            formControl.value ? 'border border-dark rounded-1' : ''
+          }} preview-color"
+        ></div>
+        <input
+          [withDefaultValue]="defaultColor"
+          class="padding-left"
+          data-cy="cmyk-picker-input"
+          formControlName="{{ attributeName }}"
+          matInput
+        />
+      </div>
+      <app-atlas-field-error
+        [customError]="customError"
+        [form]="formGroup"
+        controlName="{{ attributeName }}"
+      ></app-atlas-field-error>
+    </div>
+  </form>
 </div>
