ATLAS-1115: use atlas-lable in comment component

--- a/frontend/src/styles/am-components/_mat-dialog.scss
+++ b/frontend/src/styles/am-components/_mat-dialog.scss
@@ -1,14 +1,14 @@
-mat-dialog-container.mat-mdc-dialog-container {
-  .mat-mdc-dialog-surface {
-    box-shadow: none;
-    border-radius: 15px;
-  }
-
-  mat-dialog-content.mat-mdc-dialog-content {
-    padding: 0;
-  }
-}
-
-.atlas-dialog-backdrop {
-  background: rgba(0, 0, 0, 0.5);
-}
+//mat-dialog-container.mat-mdc-dialog-container {
+//  .mat-mdc-dialog-surface {
+//    box-shadow: none;
+//    border-radius: 15px;
+//  }
+//
+//  mat-dialog-content.mat-mdc-dialog-content {
+//    padding: 0;
+//  }
+//}
+//
+//.atlas-dialog-backdrop {
+//  background: rgba(0, 0, 0, 0.5);
+//}
