--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -1,13 +1,12 @@
 <div [formGroup]="formGroup" class="d-flex flex-column">
-  <div class="info-icon-position">
-    <mat-label [ngClass]="required ? 'required-indicator' : ''" class="font-bold-lg"
-      >{{ label | translate }}
-    </mat-label>
-  </div>
-  <mat-label *ngIf="displayLabel" class="font-regular-sm">
-    {{ 'FORM.TEXT' | translate }} |
-    {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 1500 } }}
-  </mat-label>
+  <app-atlas-lable-field
+    [fieldExamples]="[
+      { label: 'FORM.TEXT', translate: true },
+      { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '1500' } }
+    ]"
+    [required]="true"
+    fieldLabel="{{ label }}"
+  ></app-atlas-lable-field>
   <textarea data-cy="comment" formControlName="comment" matInput rows="7"></textarea>
   <app-atlas-field-error [form]="formGroup" controlName="comment"></app-atlas-field-error>
 </div>
