ATLAS-1115: migrate ttfn

--- a/frontend/src/app/core/form-components/url/url.component.html
+++ b/frontend/src/app/core/form-components/url/url.component.html
@@ -3,6 +3,7 @@
     [fieldExamples]="[
       { label: 'FORM.FOR_EXAMPLE', translate: true },
       { label: 'https://sbb.ch', translate: false },
+      { label: ' |', translate: false },
       { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
     ]"
     controlName="icon"
