--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -8,7 +8,7 @@
       <atlas-text-field
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
-          { label: 'IC8', translate: false },
+          { label: 'IC8 |', translate: false },
           { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
         ]"
         controlName="number"
@@ -23,6 +23,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'Brig - Bern - Zürich HB - Romanshorn', translate: false },
+          { label: ' |', translate: false },
           { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
         ]"
         controlName="description"
@@ -40,6 +41,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'Brig - Bern - Zürich HB - Romanshorn', translate: false },
+          { label: ' |', translate: false },
           { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
         ]"
         controlName="longName"
@@ -56,6 +58,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'b0.IC8', translate: false },
+          { label: ' |', translate: false },
           { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
         ]"
         [required]="true"
