--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -14,6 +14,7 @@
           [fieldExamples]="[
             { label: 'FORM.FOR_EXAMPLE', translate: true },
             { label: '1', translate: false },
+            { label: ' |', translate: false },
             { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
           ]"
           controlName="number"
@@ -29,6 +30,7 @@
           [fieldExamples]="[
             { label: 'FORM.FOR_EXAMPLE', translate: true },
             { label: 'Thun Bahnhof - Gwatt Deltapark - Einigen - Spiez Bahnhof', translate: false },
+            { label: ' |', translate: false },
             {
               label: 'FORM.MAX_CHARS',
               translate: true,
@@ -52,6 +54,7 @@
               label: 'Thun Bahnhof - Schadau - Gwatt Deltapark - Einigen - Spiez Bahnhof',
               translate: false
             },
+            { label: ' |', translate: false },
             {
               label: 'FORM.MAX_CHARS',
               translate: true,
@@ -100,6 +103,7 @@
           [fieldExamples]="[
             { label: 'FORM.FOR_EXAMPLE', translate: true },
             { label: 'r.31.001:a', translate: false },
+            { label: ' |', translate: false },
             { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
           ]"
           [required]="true"
