--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -2,6 +2,7 @@
   <app-atlas-lable-field
     [fieldExamples]="[
       { label: 'FORM.TEXT', translate: true },
+      { label: ' |', translate: false },
       { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '1500' } }
     ]"
     [required]="true"
