ATLAS-1115: migrate bo

--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -8,7 +8,8 @@
       <atlas-text-field
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
-          { label: 'IC8 |', translate: false },
+          { label: 'IC8', translate: false },
+          { label: ' |', translate: false },
           { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
         ]"
         controlName="number"
